Added link to manage page, changed directory structure of js

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DataSource configuration
 spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.url=jdbc:h2:tcp://localhost/~/ractive_reports
-#spring.datasource.url=jdbc:h2:mem:ractive_reports
+spring.datasource.url=jdbc:h2:mem:ractive_reports
 spring.datasource.username=sa
 spring.datasource.password:
 
